feat: with gobs payoff
