# gobs/api/pricer.pb.go
@@ -183,38 +183,115 @@ func (m *PriceResponse) GetClientId() string {
 	return ""
 }
 
+type PayoffResponse struct {
+	Prices               []float64 `protobuf:"fixed64,1,rep,packed,name=prices,proto3" json:"prices,omitempty"`
+	Deltas               []float64 `protobuf:"fixed64,2,rep,packed,name=deltas,proto3" json:"deltas,omitempty"`
+	Gammas               []float64 `protobuf:"fixed64,3,rep,packed,name=gammas,proto3" json:"gammas,omitempty"`
+	Vegas                []float64 `protobuf:"fixed64,4,rep,packed,name=vegas,proto3" json:"vegas,omitempty"`
+	Rhos                 []float64 `protobuf:"fixed64,5,rep,packed,name=rhos,proto3" json:"rhos,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}  `json:"-"`
+	XXX_unrecognized     []byte    `json:"-"`
+	XXX_sizecache        int32     `json:"-"`
+}
+
+func (m *PayoffResponse) Reset()         { *m = PayoffResponse{} }
+func (m *PayoffResponse) String() string { return proto.CompactTextString(m) }
+func (*PayoffResponse) ProtoMessage()    {}
+func (*PayoffResponse) Descriptor() ([]byte, []int) {
+	return fileDescriptor_fec020e99f204f1f, []int{2}
+}
+
+func (m *PayoffResponse) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_PayoffResponse.Unmarshal(m, b)
+}
+func (m *PayoffResponse) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_PayoffResponse.Marshal(b, m, deterministic)
+}
+func (m *PayoffResponse) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_PayoffResponse.Merge(m, src)
+}
+func (m *PayoffResponse) XXX_Size() int {
+	return xxx_messageInfo_PayoffResponse.Size(m)
+}
+func (m *PayoffResponse) XXX_DiscardUnknown() {
+	xxx_messageInfo_PayoffResponse.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_PayoffResponse proto.InternalMessageInfo
+
+func (m *PayoffResponse) GetPrices() []float64 {
+	if m != nil {
+		return m.Prices
+	}
+	return nil
+}
+
+func (m *PayoffResponse) GetDeltas() []float64 {
+	if m != nil {
+		return m.Deltas
+	}
+	return nil
+}
+
+func (m *PayoffResponse) GetGammas() []float64 {
+	if m != nil {
+		return m.Gammas
+	}
+	return nil
+}
+
+func (m *PayoffResponse) GetVegas() []float64 {
+	if m != nil {
+		return m.Vegas
+	}
+	return nil
+}
+
+func (m *PayoffResponse) GetRhos() []float64 {
+	if m != nil {
+		return m.Rhos
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterType((*PriceRequest)(nil), "gobs.PriceRequest")
 	proto.RegisterType((*PriceResponse)(nil), "gobs.PriceResponse")
+	proto.RegisterType((*PayoffResponse)(nil), "gobs.PayoffResponse")
 }
 
 func init() { proto.RegisterFile("pricer.proto", fileDescriptor_fec020e99f204f1f) }
 
 var fileDescriptor_fec020e99f204f1f = []byte{
-	// 360 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x54, 0x91, 0xcd, 0x4e, 0xe3, 0x30,
-	0x14, 0x85, 0xe5, 0x36, 0x4d, 0x1b, 0xb7, 0x23, 0xcd, 0x78, 0x46, 0xa3, 0x50, 0x40, 0xaa, 0xb2,
-	0xaa, 0x40, 0x24, 0x08, 0x76, 0xb0, 0x83, 0x05, 0x62, 0x87, 0x02, 0x0b, 0xc4, 0x26, 0x72, 0x52,
-	0x2b, 0x35, 0xb8, 0xb9, 0xc6, 0x76, 0x0a, 0xdd, 0xf2, 0x0a, 0xbc, 0x19, 0xbc, 0x02, 0x0f, 0x82,
-	0x6c, 0x17, 0xa9, 0xdd, 0xdd, 0xf3, 0xe5, 0xfe, 0xf8, 0xe4, 0xe0, 0x91, 0x54, 0xbc, 0x62, 0x2a,
-	0x95, 0x0a, 0x0c, 0x90, 0xa0, 0x86, 0x52, 0x8f, 0xf7, 0x6a, 0x80, 0x5a, 0xb0, 0x8c, 0x4a, 0x9e,
-	0xd1, 0xa6, 0x01, 0x43, 0x0d, 0x87, 0x46, 0xfb, 0x9e, 0xe4, 0x03, 0xe1, 0xd1, 0x8d, 0x1d, 0xca,
-	0xd9, 0x73, 0xcb, 0xb4, 0x21, 0x13, 0x3c, 0xb4, 0x4b, 0x78, 0x53, 0xcf, 0xa8, 0x61, 0x31, 0x9a,
-	0xa0, 0x29, 0xca, 0x37, 0x11, 0xf9, 0x8f, 0x43, 0x6d, 0x14, 0x7f, 0x62, 0x71, 0xc7, 0x7d, 0x5c,
-	0x2b, 0xcb, 0xd9, 0xab, 0xe4, 0x6a, 0x15, 0x77, 0x3d, 0xf7, 0x8a, 0xec, 0xe0, 0x81, 0x6c, 0x4d,
-	0x51, 0x51, 0x21, 0xe2, 0x60, 0x82, 0xa6, 0x51, 0xde, 0x97, 0xad, 0xb9, 0xa4, 0x42, 0x10, 0x82,
-	0x03, 0x2d, 0xc1, 0xc4, 0x3d, 0x37, 0xe0, 0x6a, 0xf2, 0x1b, 0x77, 0x97, 0x20, 0xe2, 0xd0, 0x21,
-	0x5b, 0xda, 0x2e, 0x65, 0xdf, 0xd2, 0xf7, 0x5d, 0xb6, 0x26, 0xbb, 0x38, 0xaa, 0x04, 0x67, 0x8d,
-	0x29, 0xf8, 0x2c, 0x1e, 0xb8, 0xad, 0x03, 0x0f, 0xae, 0x67, 0xc9, 0x0b, 0xfe, 0xb5, 0xf6, 0xa4,
-	0x25, 0x34, 0x9a, 0x91, 0x7f, 0xb8, 0xb7, 0xa4, 0xa2, 0xfd, 0xb1, 0xe3, 0x05, 0xd9, 0xc7, 0xd8,
-	0x15, 0x85, 0x59, 0x49, 0x6f, 0x26, 0xca, 0x23, 0x47, 0xee, 0x56, 0xd2, 0x0d, 0x31, 0xa5, 0x40,
-	0x39, 0x3b, 0x51, 0xee, 0xc5, 0xf6, 0xe1, 0x60, 0xfb, 0xf0, 0xc9, 0xfd, 0xfa, 0xb0, 0xba, 0x65,
-	0x6a, 0xc9, 0x2b, 0x46, 0xae, 0x70, 0xcf, 0x01, 0x42, 0x52, 0x1b, 0x46, 0xba, 0xf9, 0xab, 0xc7,
-	0x7f, 0xb7, 0x98, 0x7f, 0x6a, 0xf2, 0xe7, 0xed, 0xf3, 0xeb, 0xbd, 0x33, 0x4c, 0xc2, 0xcc, 0x65,
-	0x79, 0x86, 0x0e, 0xa6, 0xe8, 0x18, 0x5d, 0x1c, 0x3d, 0x1c, 0xd6, 0xdc, 0xcc, 0xdb, 0x32, 0xad,
-	0x60, 0x91, 0x09, 0x36, 0xa7, 0x8f, 0x74, 0x91, 0xd5, 0x00, 0xd2, 0xa6, 0x99, 0xd9, 0x45, 0x36,
-	0xe1, 0x73, 0x2a, 0x79, 0x21, 0xcb, 0x32, 0x74, 0xe9, 0x9e, 0x7e, 0x07, 0x00, 0x00, 0xff, 0xff,
-	0x18, 0xf1, 0xd4, 0xe3, 0x11, 0x02, 0x00, 0x00,
+	// 446 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x6c, 0x92, 0xc1, 0x8e, 0xd3, 0x30,
+	0x10, 0x86, 0xe5, 0x36, 0x4d, 0x1b, 0x6f, 0x41, 0x60, 0x56, 0x2b, 0xb3, 0x80, 0x54, 0xe5, 0x54,
+	0x2d, 0xa2, 0x41, 0x70, 0x5b, 0x6e, 0x20, 0x81, 0xb8, 0xad, 0x02, 0x27, 0x2e, 0x95, 0x9b, 0x7a,
+	0x5d, 0x83, 0x1b, 0x1b, 0xdb, 0x29, 0xf4, 0xba, 0xaf, 0xc0, 0x0b, 0xf0, 0x4c, 0xf0, 0x0a, 0x3c,
+	0x08, 0xf2, 0x4c, 0x40, 0x2d, 0xe2, 0x36, 0xff, 0x67, 0x7b, 0x66, 0xfe, 0xf1, 0xd0, 0xa9, 0xf3,
+	0xba, 0x91, 0x7e, 0xe1, 0xbc, 0x8d, 0x96, 0x65, 0xca, 0xae, 0xc2, 0xf9, 0x43, 0x65, 0xad, 0x32,
+	0xb2, 0x12, 0x4e, 0x57, 0xa2, 0x6d, 0x6d, 0x14, 0x51, 0xdb, 0x36, 0xe0, 0x9d, 0xf2, 0x07, 0xa1,
+	0xd3, 0xab, 0xf4, 0xa8, 0x96, 0x9f, 0x3b, 0x19, 0x22, 0x9b, 0xd1, 0x93, 0x94, 0x44, 0xb7, 0x6a,
+	0x2d, 0xa2, 0xe4, 0x64, 0x46, 0xe6, 0xa4, 0x3e, 0x44, 0xec, 0x8c, 0xe6, 0x21, 0x7a, 0xfd, 0x49,
+	0xf2, 0x01, 0x1c, 0xf6, 0x2a, 0x71, 0xf9, 0xd5, 0x69, 0xbf, 0xe7, 0x43, 0xe4, 0xa8, 0xd8, 0x7d,
+	0x3a, 0x71, 0x5d, 0x5c, 0x36, 0xc2, 0x18, 0x9e, 0xcd, 0xc8, 0xbc, 0xa8, 0xc7, 0xae, 0x8b, 0xaf,
+	0x84, 0x31, 0x8c, 0xd1, 0x2c, 0x38, 0x1b, 0xf9, 0x08, 0x1e, 0x40, 0xcc, 0xee, 0xd0, 0xe1, 0xce,
+	0x1a, 0x9e, 0x03, 0x4a, 0x61, 0xba, 0xe5, 0x53, 0x2f, 0x63, 0xbc, 0x95, 0x62, 0xf6, 0x80, 0x16,
+	0x8d, 0xd1, 0xb2, 0x8d, 0x4b, 0xbd, 0xe6, 0x13, 0xc8, 0x3a, 0x41, 0xf0, 0x76, 0x5d, 0x7e, 0xa1,
+	0xb7, 0x7a, 0x4f, 0xc1, 0xd9, 0x36, 0x48, 0x76, 0x4a, 0x47, 0x3b, 0x61, 0xba, 0x3f, 0x76, 0x50,
+	0xb0, 0x47, 0x94, 0x42, 0xb0, 0x8c, 0x7b, 0x87, 0x66, 0x8a, 0xba, 0x00, 0xf2, 0x7e, 0xef, 0xe0,
+	0x91, 0xf4, 0xde, 0x7a, 0xb0, 0x53, 0xd4, 0x28, 0x8e, 0x0b, 0x67, 0xff, 0x14, 0xbe, 0x21, 0xf4,
+	0xf6, 0x95, 0xd8, 0xdb, 0xeb, 0xeb, 0xbf, 0xa5, 0xcf, 0x68, 0x0e, 0x9f, 0x12, 0x38, 0x99, 0x0d,
+	0xd3, 0x54, 0x50, 0x25, 0xbe, 0x96, 0x26, 0x8a, 0xc0, 0x07, 0xc8, 0x51, 0x25, 0xae, 0xc4, 0x76,
+	0x2b, 0x02, 0x1f, 0x22, 0x47, 0x05, 0x16, 0xa4, 0x12, 0x81, 0x67, 0x80, 0x51, 0xc0, 0x68, 0x36,
+	0x36, 0xf0, 0x11, 0x40, 0x88, 0x9f, 0x7d, 0x27, 0xbd, 0x7d, 0xff, 0x4e, 0xfa, 0x9d, 0x6e, 0x24,
+	0x7b, 0x43, 0x47, 0x00, 0x18, 0x5b, 0xa4, 0x95, 0x58, 0x1c, 0x7e, 0xf8, 0xf9, 0xbd, 0x23, 0x86,
+	0x5d, 0x97, 0x77, 0x6f, 0x7e, 0xfe, 0xfa, 0x36, 0x38, 0x29, 0xf3, 0x0a, 0xda, 0xbd, 0x24, 0x17,
+	0x73, 0xf2, 0x94, 0xb0, 0xd7, 0x34, 0x47, 0x7b, 0xff, 0xcd, 0x74, 0xda, 0xb3, 0xa3, 0x01, 0x94,
+	0x0c, 0x52, 0x4d, 0xcb, 0x71, 0xe5, 0xe0, 0xe0, 0x92, 0x5c, 0xbc, 0x7c, 0xf2, 0xe1, 0xb1, 0xd2,
+	0x71, 0xd3, 0xad, 0x16, 0x8d, 0xdd, 0x56, 0x46, 0x6e, 0xc4, 0x47, 0xb1, 0xad, 0x94, 0xb5, 0x2e,
+	0xed, 0x66, 0x95, 0xd2, 0xa4, 0x7d, 0x7d, 0x21, 0x9c, 0x5e, 0xba, 0xd5, 0x2a, 0x87, 0x5d, 0x7d,
+	0xfe, 0x3b, 0x00, 0x00, 0xff, 0xff, 0xac, 0xd5, 0x2a, 0x51, 0xdf, 0x02, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -230,6 +307,7 @@ const _ = grpc.SupportPackageIsVersion6
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://godoc.org/google.golang.org/grpc#ClientConn.NewStream.
 type PricerServiceClient interface {
 	Price(ctx context.Context, opts ...grpc.CallOption) (PricerService_PriceClient, error)
+	Payoff(ctx context.Context, in *PriceRequest, opts ...grpc.CallOption) (*PayoffResponse, error)
 }
 
 type pricerServiceClient struct {
@@ -271,9 +349,19 @@ func (x *pricerServicePriceClient) Recv() (*PriceResponse, error) {
 	return m, nil
 }
 
+func (c *pricerServiceClient) Payoff(ctx context.Context, in *PriceRequest, opts ...grpc.CallOption) (*PayoffResponse, error) {
+	out := new(PayoffResponse)
+	err := c.cc.Invoke(ctx, "/gobs.PricerService/Payoff", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // PricerServiceServer is the server API for PricerService service.
 type PricerServiceServer interface {
 	Price(PricerService_PriceServer) error
+	Payoff(context.Context, *PriceRequest) (*PayoffResponse, error)
 }
 
 // UnimplementedPricerServiceServer can be embedded to have forward compatible implementations.
@@ -282,6 +370,9 @@ type UnimplementedPricerServiceServer struct {
 
 func (*UnimplementedPricerServiceServer) Price(srv PricerService_PriceServer) error {
 	return status.Errorf(codes.Unimplemented, "method Price not implemented")
+}
+func (*UnimplementedPricerServiceServer) Payoff(ctx context.Context, req *PriceRequest) (*PayoffResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Payoff not implemented")
 }
 
 func RegisterPricerServiceServer(s *grpc.Server, srv PricerServiceServer) {
@@ -314,10 +405,33 @@ func (x *pricerServicePriceServer) Recv() (*PriceRequest, error) {
 	return m, nil
 }
 
+func _PricerService_Payoff_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(PriceRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(PricerServiceServer).Payoff(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/gobs.PricerService/Payoff",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(PricerServiceServer).Payoff(ctx, req.(*PriceRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _PricerService_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "gobs.PricerService",
 	HandlerType: (*PricerServiceServer)(nil),
-	Methods:     []grpc.MethodDesc{},
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "Payoff",
+			Handler:    _PricerService_Payoff_Handler,
+		},
+	},
 	Streams: []grpc.StreamDesc{
 		{
 			StreamName:    "Price",
